--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kasper | Template 2</title>
     <!-- Render All Elements Normally -->
@@ -254,27 +255,25 @@
     <!-- Start Stats -->
     <div class="stats new-section">
       <div class="container">
-        <div class="info">
-          <div class="box">
-            <div><i class="fa-solid fa-mug-saucer"></i></div>
-            <h3>1,267</h3>
-            <p>Coffe Drinks</p>
-          </div>
-          <div class="box">
-            <div><i class="fa-regular fa-folder-open"></i></div>
-            <h3>256</h3>
-            <p>Projects Completed</p>
-          </div>
-          <div class="box">
-            <div><i class="fa-regular fa-envelope"></i></div>
-            <h3>1,743</h3>
-            <p>Mails Sent</p>
-          </div>
-          <div class="box">
-            <div><i class="fa-solid fa-medal"></i></div>
-            <h3>17</h3>
-            <p>Awards Achieved</p>
-          </div>
+        <div class="box">
+          <div><i class="fa-solid fa-mug-saucer"></i></div>
+          <h3>1,267</h3>
+          <p>Coffe Drinks</p>
+        </div>
+        <div class="box">
+          <div><i class="fa-regular fa-folder-open"></i></div>
+          <h3>256</h3>
+          <p>Projects Completed</p>
+        </div>
+        <div class="box">
+          <div><i class="fa-regular fa-envelope"></i></div>
+          <h3>1,743</h3>
+          <p>Mails Sent</p>
+        </div>
+        <div class="box">
+          <div><i class="fa-solid fa-medal"></i></div>
+          <h3>17</h3>
+          <p>Awards Achieved</p>
         </div>
       </div>
     </div>
@@ -445,9 +444,9 @@
         </div>
         <div class="contact-us">
           <form action="">
-            <input type="text" class="name" placeholder="Your Name" />
-            <input type="email" class="mail" placeholder="Your Mail" />
-            <textarea name="textarea" placeholder="Your Message"></textarea>
+            <input type="text" class="main-input" placeholder="Your Name" />
+            <input type="email" class="main-input" placeholder="Your Mail" />
+            <textarea class="main-input" placeholder="Your Message"></textarea>
             <button>SEND MESSAGE</button>
           </form>
           <div class="info">
@@ -471,17 +470,17 @@
     <!-- Start Footer -->
     <div class="footer new-section">
       <div class="container">
-        <div class="social">
-          <img src="Images/logo.png" alt="" />
-          <h3>WE ARE SOCIAL</h3>
-          <div class="icons">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-chrome"></i>
-          </div>
+        <img src="Images/logo.png" alt="" />
+        <h3>WE ARE SOCIAL</h3>
+        <div class="icons">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-youtube"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-chrome"></i>
         </div>
-        <p>&copy; 2023 - <span>Mekky</span> All Rights Reserved!</p>
+        <p class="copyright">
+          &copy; 2023 - <span>Mekky</span> All Rights Reserved!
+        </p>
       </div>
     </div>
     <!-- End Footer -->
